--- a/ejemplos.ipynb
+++ b/ejemplos.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,6 +185,26 @@
     "fig = plt.figure(figsize=(10, 5))\n",
     "plt.plot([2,8], [0,0], c='blue', lw=5,solid_capstyle='round',label='butt')\n",
     "plt.grid(True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 0.,  1.,  2.,  3.,  4.,  5.,  6.,  7.,  8.,  9., 10.])"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.linspace(0,10,11)"
    ]
   }
  ],
